<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/txtViewSettingTitle"/>

    <Button
        android:id="@+id/btnBackSettings"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/dialog_back"
        android:textColor="#F8715F"
        android:textStyle="bold"
        android:layout_alignStart="@+id/txtViewSettingTitle"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewSettingTitle">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_permissions"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/btnStoragePermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="enableStoragePermissions"
                android:text="@string/btn_permissions" />


            <TextView
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_play"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkBoxAutoPlay"/>

            <TextView
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_bars_animation"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkBoxBarVisualizer"/>

            <TextView
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtView_auto_pause"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkBoxAutoPause"/>

            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtView_assistance"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/btnHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/btn_help" />


            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/btnTermsAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/btn_terms" />
            <Button
                android:id="@+id/btnPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/btn_privacy_policy" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>