<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/btnBackCustom"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/custom_button"
        android:text="@string/dialog_back"
        android:textColor="#F8751F"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDeleteCustom"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/btnBackCustom"
        android:background="@drawable/custom_button"
        android:text="@string/dialog_delete"
        android:textColor="#F32727"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnEditSongInfo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnDeleteCustom"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:text="@string/dialog_edit_info"
        android:textColor="#1A62D8"
        android:textStyle="bold" />



</RelativeLayout>